@@ -1,3 +1,8 @@
+21 Jan 2005 mipsator
+ * keep the PATH separator as is instead of replacing it with a comma.
+ * added a debug mechanism in pmksetup to work without fork and privsep.
+ * fixed keycomp() by reverting changes that broken sorting.
+
 20 Jan 2005 mipsator
  * fixed skip_useless() to update frame buffer.
 
